# SongSage

./: .gitignore  CMakeLists.txt  README.md
files/: fontcreditsinfo.txt
src/: Button.cpp  Button.h  main.cpp  songlist.cpp  songlist.hpp  test.cpp
